docs : update participant swag docs
1. update participant swag docs
